--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha tests && npm run lint",
     "start": "electron .",
-    "dev": "electron . --debug"
+    "dev": "electron . --debug",
+    "watch": "watchify app/app.js -t babelify -o public/js/bundle.js --debug --verbose"
   },
   "repository": {
     "type": "git",
@@ -24,8 +25,20 @@
   },
   "homepage": "https://github.com/xrs1133/kankle#readme",
   "dependencies": {
+    "babel": "^6.5.2",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "babelify": "^7.3.0",
+    "browser": "^0.2.6",
+    "browserify": "^13.0.1",
     "electron": "^0.4.1",
-    "gcloud": "^0.36.0"
+    "electron-reload": "^1.0.0",
+    "gcloud": "^0.36.0",
+    "jquery": "^3.1.0",
+    "react": "^15.2.0",
+    "react-dom": "^15.2.0",
+    "reflux": "^0.4.1",
+    "watchify": "^3.7.0"
   },
   "devDependencies": {
     "chai": "^3.4.1",
