--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "test": "mocha tests && npm run lint",
     "start": "electron .",
+    "sstart": "DEBUG=*,-babel npm start",
     "dev": "electron . --debug",
-    "watch": "watchify app/app.js -t babelify -o public/js/bundle.js --debug --verbose"
+    "watch": "watchify app/containers/AppContainer.jsx -t babelify --extensions .jsx -o public/js/bundle.js --debug --verbose",
+    "forge": "(cd node_modules/node-forge && npm install && npm run bundle && cp js/forge.bundle.js ../../public/js/)"
   },
   "repository": {
     "type": "git",
@@ -25,27 +27,42 @@
   },
   "homepage": "https://github.com/xrs1133/kankle#readme",
   "dependencies": {
-    "babel": "^6.5.2",
+    "babel-core": "^6.9.0",
+    "babel-eslint": "^6.0.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-react-optimize": "^1.0.1",
     "babelify": "^7.3.0",
     "browser": "^0.2.6",
     "browserify": "^13.0.1",
-    "electron": "^0.4.1",
-    "electron-reload": "^1.0.0",
-    "gcloud": "^0.36.0",
+    "electron-debug": "^1.0.1",
+    "fast-crc32c": "^1.0.4",
+    "googleapis": "^12.0.0",
     "jquery": "^3.1.0",
+    "node-forge": "0.6.40",
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
+    "react-dropzone": "^3.5.3",
+    "react-router": "^2.5.2",
     "reflux": "^0.4.1",
+    "request": "^2.73.0",
     "watchify": "^3.7.0"
   },
   "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-plugin-module-alias": "^1.6.0",
+    "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.1.0",
     "devtron": "^1.0.0",
+    "electron-compile": "^3.3.4",
+    "electron-compilers": "^3.1.5",
     "electron-packager": "^7.0.1",
-    "electron-prebuilt": "~1.1.3",
+    "electron-prebuilt": "^1.2.7",
+    "electron-react-devtools": "^0.3.1",
+    "electron-rebuild": "^1.1.4",
+    "electron-reload": "^1.0.0",
     "mocha": "^2.3.4",
     "request": "^2.70.0",
     "rimraf": "^2.5.2",
